// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders tappable item for available item 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 168,
          "justifyContent": "space-around",
          "margin": 16,
          "width": 168,
        },
        Object {},
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "uri": "https://example.com/assets/images/coffee.png",
        }
      }
      style={
        Object {
          "height": 96,
          "width": 96,
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      ¥
      120
    </Text>
  </View>
</View>
`;

exports[`Item renders untappable item for unavailable item 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 168,
        "justifyContent": "space-around",
        "margin": 16,
        "width": 168,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "https://example.com/assets/images/coffee.png",
      }
    }
    style={
      Object {
        "height": 96,
        "width": 96,
      }
    }
  />
  <Text
    style={
      Object {
        "fontSize": 16,
      }
    }
  >
    ¥
    120
  </Text>
</View>
`;

exports[`Item renders untappable item for unavailable item 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 168,
        "justifyContent": "space-around",
        "margin": 16,
        "width": 168,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "https://example.com/assets/images/coffee.png",
      }
    }
    style={
      Object {
        "height": 96,
        "width": 96,
      }
    }
  />
  <Text
    style={
      Object {
        "fontSize": 16,
      }
    }
  >
    ¥
    120
  </Text>
</View>
`;

exports[`Item renders untappable item for unavailable item 3`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 168,
        "justifyContent": "space-around",
        "margin": 16,
        "width": 168,
      },
      Object {
        "backgroundColor": "gray",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "https://example.com/assets/images/coffee.png",
      }
    }
    style={
      Object {
        "height": 96,
        "width": 96,
      }
    }
  />
  <Text
    style={
      Object {
        "fontSize": 16,
      }
    }
  >
    ¥
    120
  </Text>
</View>
`;
